Home: 코드 정리 및 기능 수정
* Controller 주석 추가
* 코드 정리
* 지역 선택 페이지에서 여행 계획을 받아올때 지역코드를 기준으로 받아오도록 수정
* 메인 페이지, 지역 선택 페이지 개발 완료